# jorgevs.com

./: .htaccess  CLAUDE.md  CNAME  FIX_LOCALHOST_ISSUE.md  FIX_SUMMARY.md  GITHUB_PAGES_SETUP.md  README.md  TEST_PLAN.md  check-main.html  compare-test.html  debug-localhost.html  debug-test.html  debug.html  dev-server-cached.js  dev-server.js  diagnose-css.html  diagnose-final.html  diagnose.html  example-usage.js  fix-jvsvault.sh  fixed.html  force-refresh.html  generate-context.sh  index-backup-20250619-210332.html  index-diagnostic.html  index-fixed.html  index-immediate.html  index.html  jorgevs-site-context.txt  jvs.vision.html  layout-test.html  list-images.php  run-jvsvault-fixed.sh  run-jvsvault.sh  template.html  test-api-fetch.html  test-background.html  test-color-extraction.html  test-css-loading.html  test-css.html  (+7 more)
about/: index.html
assets/css/: background-direct.css  base.css  jvs-vision.css  main-v2.css  main-v3-backup.css  main-v3-clean.css  main-v3.css  main-v4.css  main.css  style.css  styles.css  table-fix.css  visibility-fix.css
assets/js/: auto-image-detector.js  background-cache.js  content-manager.js  fast-randomizer.js  image-preloader.js  jvs-vision.js  main.js  metadata-rotator.js  navigation.js  randomizer-fixed.js  randomizer-optimized.js  script.js  (+2 more)
components/: footer.html  header.html  nav.html
contact/: index.html
en/: index.html
etc/: index.html
links/: index.html
listen/: index.html
mailinglist/: index.html
manifest/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
works/: index.html
(+22 files in other folders)
